# cairo-core

./: .gitignore  Changelog  LICENSE  README.md  Setup.hs  cairo-core.cabal  stack.yaml
.circleci/: config.yml
include/: cairo-core.h
src/Graphics/Cairo/: HasStatus.hs  Render.hs  Types.chs
src/Graphics/Cairo/Drawing/: Cairo.chs  Paths.chs  Patterns.chs  Region.chs  TagsLinks.chs  Text.chs  Transformations.chs
src/Graphics/Cairo/Fonts/: FontFace.chs  FontOptions.chs  ScaledFont.chs
src/Graphics/Cairo/Surfaces/: Device.chs  Image.chs  PDF.chs  PNG.chs  PostScript.chs  Recording.chs  SVG.chs  Script.chs  Surface.chs
src/Graphics/Cairo/Utilities/: ErrorHandling.chs  Matrix.hs  VersionInformation.chs
