name:                cairo-core
version:             1.16.0
-- synopsis:
-- description:
homepage:            https://github.com/magicloud/cairo-core#readme
license:             BSD3
license-file:        LICENSE
author:              Magicloud
maintainer:          magiclouds@gmail.com
copyright:           None
category:            Graphics
build-type:          Custom
extra-source-files:  README.md
cabal-version:       >=2.0

custom-setup
  setup-depends:
    base >= 4.7 && < 5,
    Cabal,
    filepath,
    haskell-src-exts,
    directory

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.Cairo.Types
                       Graphics.Cairo.HasStatus
                       Graphics.Cairo.Utilities.Matrix
                       Graphics.Cairo.Utilities.ErrorHandling
                       Graphics.Cairo.Utilities.VersionInformation
                       Graphics.Cairo.Surfaces.Surface
                       Graphics.Cairo.Surfaces.Device
                       Graphics.Cairo.Fonts.FontFace
                       Graphics.Cairo.Fonts.FontOptions
                       Graphics.Cairo.Fonts.ScaledFont
                       Graphics.Cairo.Drawing.TagsLinks
                       Graphics.Cairo.Drawing.Text
                       Graphics.Cairo.Drawing.Transformations
                       Graphics.Cairo.Drawing.Region
                       Graphics.Cairo.Drawing.Patterns
                       Graphics.Cairo.Drawing.Paths
                       Graphics.Cairo.Drawing.Cairo
                       Graphics.Cairo.Render
--  other-modules:       Graphics.Cairo.Types
  build-depends:       base >= 4.7 && < 5
                     , monad-extras
                     , transformers
  default-language:    Haskell2010
  include-dirs:        include
  pkgconfig-depends:   cairo
  build-tools:         c2hs
  default-extensions:  LambdaCase

source-repository head
  type:     git
  location: https://github.com/magicloud/cairo-core
